# ix

./: .#qw  .gitignore  1  CLAUDE.md  CMakeLists.txt  Dockerfile  LICENSE  Makefile  PKGS.md  PLAN.md  README.md  SCP.md  a.out  bad  config.h  configure  d  find.py  fix  fix.py  flt  good  ix  ix.1  log  log1  mesa.diff  mix  push  qw.sh  repology.py  run.sh  run1.sh  up  updates
core/: build_cmd.py  cache.py  cache_cmd.py  cmd_build.py  cmd_gc.py  cmd_line.py  cmd_misc.py  cmd_realm.py  cmd_tool.py  config.py  entry.py  error.py  execute.py  gc_cmd.py  gen_cmds.py  gg.py  http_fetch.py  j2.py  lex.py  log.py  main.py  manager.py  misc_cmd.py  ops.py  ops_fake.py  ops_loc.py  ops_molot.py  ops_sys.py  package.py  par_exec.py  parse_sh.py  pypi_cmd.py  realm.py  realm_cmd.py  render_ctx.py  repo.py  repology.py  sh_cmd.py  shell_cmd.py  sign.py  (+3 more)
docs/: ACCEL.md  CASES.md  ETC.md  FS.md  GUIDE.md  INSTALL.md  IX.md  KERNEL.md  STALIX.md
go/: arch.go  cmp.py  cmp2.py  cmp3.py  config.go  descriptor.go  gen_cmds.go  go.mod  graph.go  hash.go  hash_test.go  lex.go  main.go  manager.go  package.go  pyjson.go  realm.go  render.py  renderer.go  sign.go
mix/: mix
mix/core/: build_cmd.py  cache_cmd.py  gc_cmd.py  j2.py  main.py  package.py  realm_cmd.py  shell.py
mix/pkgs/util/: build_clang.sh  build_compiler_rt.sh  env.py  fetch_cmake.sh
pkgs/: chmod.2  d  fix.py  qw.sh
pkgs/alt/box/: mix.sh
pkgs/alt/c/: mix.sh
pkgs/alt/sh/: mix.sh
pkgs/aux/adwaita-icon-theme/: mix.sh
pkgs/aux/ca-bundle/: ix.sh  mix.sh
pkgs/aux/cargo/: ix.sh
pkgs/aux/entropy/: ix.sh
pkgs/aux/etc/: mix.sh
pkgs/aux/fetch/: ix.sh
pkgs/aux/firmware/: ix.sh  mix.sh
pkgs/aux/font-awesome/: mix.sh
pkgs/aux/git/: ix.sh
pkgs/aux/go/: ix.sh
pkgs/aux/google-fonts/: mix.sh
pkgs/aux/hicolor-icon-theme/: ix.sh  mix.sh
pkgs/aux/http/: ix.sh
pkgs/aux/hwdata/: ix.sh
pkgs/aux/iso-codes/: ix.sh  mix.sh
pkgs/aux/magic/: ix.sh  mix.sh
pkgs/aux/terminfo/: ix.sh
pkgs/aux/tzdata/: ix.sh  mix.sh
pkgs/aux/x11/: ix.sh
pkgs/aux/xdg-shared-mime-info/: ix.sh  mix.sh
pkgs/bld/: ix.sh
pkgs/bld/all/: ix.sh
pkgs/bld/auto/: ix.sh
pkgs/bld/autohell/: mix.sh
pkgs/bld/b2/: ix.sh  mix.sh
pkgs/bld/bash/: ix.sh  mix.sh
pkgs/bld/bc/: ix.sh
pkgs/bld/bison/: ix.sh  mix.sh
pkgs/bld/bmake/: ix.sh  mix.sh
pkgs/bld/bootbox/: mix.sh
pkgs/bld/box/: ix.sh  mix.sh
pkgs/bld/bsdtar/: mix.sh
pkgs/bld/byacc/: ix.sh  mix.sh
pkgs/bld/cargo/: ix.sh
pkgs/bld/cctools/: ix.sh
pkgs/bld/cmake/: ix.sh  mix.sh
pkgs/bld/compiler/: ix.sh  mix.sh
pkgs/bld/conan/: conan.py  ix.sh
pkgs/bld/convert/: ix.sh
pkgs/bld/devendor/: devendor.sh  devendor_c.sh  devendor_h.sh  ix.sh
pkgs/bld/dlfcn/: cut_prefix.py  ix.sh
pkgs/bld/ed/: ix.sh
pkgs/bld/elfutils/: ix.sh
pkgs/bld/exec/: exec_script.sh  ix.sh
pkgs/bld/extract/: ix.sh  mix.sh
pkgs/bld/fake/: ix.sh
pkgs/bld/fakegit/: ix.sh
pkgs/bld/fakeitstool/: ix.sh
pkgs/bld/fakelsb/: ix.sh
pkgs/bld/fetch/: fetch.py  ix.sh
pkgs/bld/flex/: ix.sh  mix.sh
pkgs/bld/genpc/: genpc.sh  ix.sh
pkgs/bld/gettext/: ix.sh  mix.sh
pkgs/bld/gir/: ix.sh
pkgs/bld/git/: ix.sh
pkgs/bld/glib/: ix.sh
pkgs/bld/gnome/: ix.sh
pkgs/bld/gnubox/: mix.sh
pkgs/bld/gtkdoc/: ix.sh
pkgs/bld/guile/: ix.sh
pkgs/bld/gyp/: ix.sh
pkgs/bld/gzip/: ix.sh  mix.sh
pkgs/bld/help2man/: ix.sh  mix.sh
pkgs/bld/iconker/: ix.sh
pkgs/bld/icontool/: ix.sh
pkgs/bld/icu/: ix.sh
pkgs/bld/implib/: ix.sh
pkgs/bld/inkscape/: ix.sh
pkgs/bld/intltool/: ix.sh
pkgs/bld/jail/: ix.sh
pkgs/bld/jikes/: ix.sh
pkgs/bld/jimsh/: ix.sh
pkgs/bld/kuroko/: ix.sh
pkgs/bld/librarian/: fixallns.sh  ix.sh  joinar.sh  listsym.sh  patchns.sh  safear.py  safeex.py  substr.py
pkgs/bld/libtool/: ix.sh
pkgs/bld/linker/: ix.sh  mix.sh
pkgs/bld/lxqt/: ix.sh
pkgs/bld/m4/: ix.sh  mix.sh
pkgs/bld/make/: ix.sh  mix.sh
pkgs/bld/meson/: ix.sh  mix.sh
pkgs/bld/mold/: ix.sh  mix.sh
pkgs/bld/musl/: ix.sh
pkgs/bld/nasm/: ix.sh
pkgs/bld/ninja/: ix.sh  mix.sh
pkgs/bld/npm/: ix.sh
pkgs/bld/pack/: ix.sh
pkgs/bld/par/: ix.sh
pkgs/bld/patch/: ix.sh  patcher.py
pkgs/bld/perl/: ix.sh  mix.sh
pkgs/bld/pip/: fix_dist.sh  ix.sh  py_exports.py
pkgs/die/: autohell.sh  autorehell.sh  base.json  base.sh  c_std_pre.sh  cgo.sh  cmake.sh  configure.sh  cross_tc.sh  env.sh  fetch.sh  fonts.sh  gn.sh  gnome.sh  hooks.sh  hub.sh  ix.json  kconfig.sh  make.sh  meson.sh  mix.json  ninja.sh  proxy.sh  py.py  py_script.py  qt.sh  realm.py  registar.sh  script.json  sh.sh  sh0.sh  sh1.sh  sh2.sh  waf.sh  wafbase.sh  wrapped.sh  wrapper.sh
pkgs/etc/: ix.sh  mix.sh
pkgs/mix/: autohell.sh  autorehell.sh  c_std.sh  cargo.sh  cmake.sh  cross_tc.sh  dl_stubs.sh  dlstubs.sh  gnome.sh  hooks.sh  make.sh  meson.sh  ninja.sh  premain.sh  qt.sh  realm.py  sh.sh  waf.sh  wrapped.sh
pkgs/pip/: mount.py  pypi.json
pkgs/pypi/: mount.py  pypi.json
pkgs/set/: stalix
pkgs/util/: autohell.sh  base.sh  build_clang.sh  build_compiler_rt.sh  build_libcxx.sh  build_stdenv.py  cmake.sh  fetch_llvm.sh  freeze.sh  make.sh  run_sh_script.py  sh.sh  template.sh  wheel.sh
(+4633 files in other folders)
